# rosehip

./: Cargo.toml  README.md  install.sh
examples/: mnist.rs  tmnist.rs
src/: dataset.rs  lib.rs  main.rs  math.rs  model.rs  tmodel.rs
src/step/: activations.rs  linearlayer.rs  mod.rs
src/steps/: activations.rs  linearlayer.rs  mod.rs  step.rs
